--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-PROXY_ENDPOINT_URL=
+PROXY_ENDPOINT_URL=your_proxy_endpoint_url_here
 
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_NAME=
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+
+DATABASE_HOST=your_db_hostname_here
+DATABASE_PORT=your_db_port_here
+DATABASE_USER=your_db_username_here
+DATABASE_PASSWORD=your_db_password_here
+DATABASE_NAME=your_db_name_here
