--- a/requirements.txt
+++ b/requirements.txt
@@ -41,15 +41,29 @@ Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mpmath==1.3.0
 multidict==6.1.0
+networkx==3.3
 nltk==3.9.1
 numpy==2.2.2
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cuda-cupti-cu11==11.8.87
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cudnn-cu11==9.1.0.70
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.3.0.86
+nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusparse-cu11==11.7.5.86
+nvidia-nccl-cu11==2.21.5
+nvidia-nvtx-cu11==11.8.86
 openai==1.61.1
 packaging==24.2
 pillow==10.4.0
 playwright==1.50.0
 propcache==0.2.1
 psutil==6.1.1
+psycopg2==2.9.10
 pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.7.1
@@ -60,20 +74,25 @@ pyOpenSSL==25.0.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 rank-bm25==0.2.2
+redis==5.2.1
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.22.3
+setuptools==70.2.0
 sniffio==1.3.1
 snowballstemmer==2.2.0
 soupsieve==2.6
 SQLAlchemy==2.0.37
 starlette==0.45.3
+sympy==1.13.1
 tf-playwright-stealth==1.1.1
 tiktoken==0.8.0
 tokenizers==0.21.0
+torch==2.6.0+cu118
 tqdm==4.67.1
+triton==3.2.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
