better url filtering, crawler uses bfs to cover more area, more 'polite' crawling methodolody, creation of admin, only admins can clear cache

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
+PRODUCT_DATABASE_URL=http://[username]:[password]@localhost:[port]/[database_name]/crawler_products
+CACHE_DATABASE_URL=http://[username]:[password]@localhost:[port]/[database_name]/crawler_cache
+
 PROXY_ENDPOINT_URL=your_proxy_endpoint_url_here
 
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
-DATABASE_HOST=your_db_hostname_here
-DATABASE_PORT=your_db_port_here
-DATABASE_USER=your_db_username_here
-DATABASE_PASSWORD=your_db_password_here
-DATABASE_NAME=your_db_name_here
+ADMIN_SECRET_KEY=your-very-secure-secret-key
+ADMIN_USERNAME=your-admin-username
+ADMIN_PASSWORD=your-admin-password
